<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventAlly</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
     <string name="radiobutton_eventrelevance">Sort by Event Relevance</string>
     <string name="radiobutton_categoryrelevance">Sort by Category Relevance</string>
    <string name="activity_eventlist_Header">Events List</string>
    <string name="activity_eventlist_Location">Location</string>
    <string name="activity_main_Header">Events</string>
    <string name="activity_about_Header">About</string>
    <string name="aboutdetails">"<b>IIT Building Information</b>\n\nAuthor : Megha Ramachandra\n\nSemester : Spring 2013\n\nEmail ID : mramacha@hawk.iit.edu\n\nPhone No : 6166063442"</string>
    <string name="button_chicago_events">Chicago Events</string>
    <string name="button_mylocation_events">My Location Events</string>
    <string name="animate">Animate</string>
    <string name="stop_animation">\u25A0</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_sydney">Go to Sydney</string>

</resources>