<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextViewMainActivityHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:gravity="center_horizontal"
        android:inputType="none"
        android:padding="5dp"
        android:text="@string/activity_main_Header"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:id="@+id/LinearLayout_Buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Button_Chicago_Events"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            
            android:padding="5dp"
            android:text="@string/button_chicago_events"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button_Location_Events"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            
            android:padding="5dp"
            android:text="@string/button_mylocation_events"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout_Buttons"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp" >

        <RadioButton
            android:id="@+id/radioButtonEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radiobutton_eventrelevance" />

        <RadioButton
            android:id="@+id/radioButtonCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_categoryrelevance" />
    </RadioGroup>

</RelativeLayout>