<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextViewEventLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:gravity="center_horizontal"
        android:inputType="none"
        android:padding="5dp"
        android:text="@string/activity_eventlist_Location"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/zoom_in"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
           
            android:onClick="onZoomIn"
            android:text="@string/zoom_in" />

        <Button
            android:id="@+id/zoom_out"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
           
            android:onClick="onZoomOut"
            android:text="@string/zoom_out" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />

</LinearLayout>